ZON-4188: Avoid jumping when the podlove button loads

--- a/sass/web.site/modules/article/_article-heading--podcast.sass
+++ b/sass/web.site/modules/article/_article-heading--podcast.sass
@@ -57,6 +57,13 @@
 			margin-left: remify(4px)
 			position: absolute
 
+.podcast-sharing__podlove
+	// avoid jumping while the JS loads
+	display: inline-block
+	max-height: remify(30px)
+	max-width: remify(110px)
+	overflow: hidden
+
 +respond-min($break-tablet-min)
 	.article-heading
 		&--podcast
